[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/default.tres" type="DynamicFont" id=1]
[ext_resource path="res://nodes/blob.svg" type="Texture" id=2]
[ext_resource path="res://scenes/card.gd" type="Script" id=3]
[ext_resource path="res://sounds/swish.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/swoosh.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/poof.wav" type="AudioStream" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.45098, 0.584314, 0.843137, 1 )
border_color = Color( 0.0627451, 0.141176, 0.176471, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0, 0, 0, 0.392157 )
shadow_size = 4
shadow_offset = Vector2( -2, 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 105.74, 143.46 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0.243137 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Card" type="Node2D" groups=[
"cards",
]]
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
margin_left = -105.0
margin_top = -291.0
margin_right = 104.0
margin_bottom = -2.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -103.0
margin_top = -290.336
margin_right = 103.0
margin_bottom = -1.33582
mouse_filter = 2
color = Color( 0.105882, 0.67451, 0.847059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -145.336 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -6.10352e-05, 0.00012207 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -89.0
margin_top = -279.0
margin_right = 85.0
margin_bottom = -184.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Name"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="Panel" parent="."]
margin_left = -97.0
margin_top = -166.0
margin_right = 94.0
margin_bottom = -10.0
mouse_filter = 2
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="."]
margin_left = -92.0
margin_top = -160.0
margin_right = 146.0
margin_bottom = 31.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Description"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( -103.288, -287.778 )
scale = Vector2( 0.542341, 0.542341 )
texture = ExtResource( 2 )

[node name="Energy" type="Label" parent="Sprite"]
margin_left = -51.1637
margin_top = -47.4558
margin_right = -17.1637
margin_bottom = -16.4558
rect_scale = Vector2( 3, 3 )
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="PlaySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -6.848

[node name="ReturnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -6.848

[node name="Image" type="TextureRect" parent="."]
margin_left = -88.0
margin_top = -243.735
margin_right = 85.0
margin_bottom = -178.735
mouse_filter = 2
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Area2D" to="." method="_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_mouse_exited"]
